task5/src/modules/KanbanPage/kanban-page.module.css
.title {
   display: flex;
   align-items: center;
   gap: 1rem;

   &>div {
      margin-left: 1rem;
   }

   &>h6 {
      margin-bottom: 0 !important;
      flex-grow: 1;
   }

   button {
      background-color: var(--main-blue);
      color: white;
      height: 40px;
      padding: 0 2rem;
      border-radius: 8px;

      span {
         border: 1px solid white;
         width: 16px;
         height: 16px;
         display: inline-block;
         border-radius: 4px;
         line-height: 15px;
         margin-right: 0.5rem;
         text-align: center;
      }
   }
}

.filters {
   display: flex;
   flex-wrap: wrap;
   gap: 0.9rem;
   align-items: end;
   justify-content: space-between;

   &+.filters {
      margin-top: 1rem;
      width: 49.5%;

      &>div {
         flex-grow: 0.5;
      }
   }

   &>div {
      flex-grow: 0.25;
      display: flex;
      flex-direction: column;
      gap: 0.6rem;
   }

   @media screen and (max-width: 1279px) {
      display: grid;
      grid-template-columns: repeat(2, 1fr);

      &+.filters {
         width: 100%;
      }
   }

   label {
      display: block;
      color: var(--bread-crumbs-text);
      font-size: 14px;
   }

   input {
      width: 264px;
      width: 100%;
   }
}

.kanban_container {
   overflow: auto;
   
   overflow: -moz-scrollbars-none;
   scrollbar-width: none;
   
   width: 100%;
   width: max-content;

   &::-webkit-scrollbar {
      width: 0;
   }
}

.kanban {
   display: flex;
   justify-content: space-around;
   margin-top: 2rem;
   gap: 1rem;
   min-width: 1280px;

   &>div>h4 {
      margin-top: 0 !important;
      color: var(--nav-menu-btns);
      font-size: 14px !important;
      margin: .75rem 0;
      display: inline-block;

      &::after {
         content: attr(data-count);
         position: absolute;
         right: -2rem;
         background-color: var(--bread-crumbs-back);
         padding: .25rem .5rem;
         color: var(--main-blue);
         border-radius: 8px;
         top: -.25rem;
         font-size: 12px;
         font-weight: 400;
      }
   }



   &>div, &>.col {

      flex: 1 1 0px;
      min-width: 245px;

      .tasks {
         padding: .6rem;
         background-color: #F4F6F8;
         height: 50rem;
         /* height: 85%; */
         min-width: 256px;
         border-radius: .75rem;
         transition: .5s;

         display: flex;
         flex-direction: column;
         gap: .6rem;
      }
   }
}

